<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p3"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/p8"
            android:textSize="20sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="240dp"
            android:text="@string/home_subtitle"
            android:textColor="@color/c10"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/border_radius_bg"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOpenCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/p3"
                android:paddingVertical="12dp"
                android:text="@string/home_btn_open_camera"
                android:textAllCaps="true"
                android:textColor="@color/p8"
                android:textSize="16sp"
                android:textAlignment="center"
                app:icon="@drawable/camera"
                app:iconGravity="textStart"
                app:iconTint="@color/p8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/home_or_text"
                android:textColor="@color/c10"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChoosePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/p3"
                android:paddingVertical="12dp"
                android:text="@string/home_btn_choose_picture"
                android:textAllCaps="true"
                android:textColor="@color/p8"
                android:textSize="16sp"
                android:textAlignment="center"
                app:icon="@drawable/image"
                app:iconGravity="textStart"
                app:iconTint="@color/p8" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>