<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.LanguagesFragment"
    android:background="@color/c1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages_title"
            android:textColor="@color/c10"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:drawableLeftCompat="@drawable/arrow_left"
            android:drawablePadding="12dp"
            android:drawableTint="@color/c10"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="12dp"
            app:strokeColor="@color/c3"
            app:strokeWidth="2dp"
            android:padding="12dp"
            android:id="@+id/languages_btn_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TRANSPARENT"
            android:text="@string/languages_btn_english"
            android:textColor="@color/c10"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="12dp"
            app:strokeColor="@color/c3"
            app:strokeWidth="2dp"
            android:padding="12dp"
            android:id="@+id/languages_btn_spanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TRANSPARENT"
            android:text="@string/languages_btn_spanish"
            android:textColor="@color/c10"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="12dp"
            app:strokeColor="@color/c3"
            app:strokeWidth="2dp"
            android:padding="12dp"
            android:id="@+id/languages_btn_portuguese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/TRANSPARENT"
            android:text="@string/languages_btn_portuguese"
            android:textColor="@color/c10"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>

</FrameLayout>